--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Local PC & Laptop Repair Services | Troubleshooting & Fixing</title>
     <meta name="description"
         content="Expert PC and laptop repair services in your local area. Hardware troubleshooting, software fixes, and personal service. We come to you or meet locally.">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -379,7 +379,7 @@
         <i class="fa-solid fa-phone"></i>
     </a>
 
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
